# LightString-STM32F103

./: .gitignore  LICENSE  NOTICE.md  README.md
firmware/: CMakeLists.txt  README.md  STM32F103XX_FLASH.ld
firmware/App/: light_sense.c  light_sense.h  lightstring.c  lightstring.h  recorder.c  recorder.h  scale_quantizer.c  scale_quantizer.h  synth_vs1053.c  synth_vs1053.h  timebase.c  timebase.h  ui_lcd.c  ui_lcd.h
firmware/Core/Src/: main.c  syscalls.c
firmware/HARDWARE/ADC3/: adc3.c  adc3.h
firmware/HARDWARE/BEEP/: beep.c  beep.h
firmware/HARDWARE/KEY/: key.c
firmware/HARDWARE/LSENS/: lsens.c  lsens.h
firmware/HARDWARE/REMOTE/: remote.c  remote.h
firmware/HARDWARE/SDIO/: sdio_sdcard.c  sdio_sdcard.h
firmware/HARDWARE/SPI/: spi.c  spi.h
firmware/HARDWARE/VS10XX/: vs10xx.c  vs10xx.h
firmware/HARDWARE/W25QXX/: w25qxx.h
firmware/SYSTEM/sys/: sys.c
firmware/USER/: MUSICPLAYER.uvoptx  MUSICPLAYER.uvprojx  main.c
host_tools/: serial_midi_bridge.py
tools/figures_src/: make_figures.py
